<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">

    <Button
        android:id="@+id/btn_event_explore"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/explore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>

    <Button
        android:layout_below="@id/btn_event_explore"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_event_checkout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_below="@id/btn_event_checkout"
        android:layout_marginTop="10dp"
        android:id="@+id/btn_event_logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>