<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_to_login"
        android:layout_below="@id/tv_tittle"
        android:layout_marginTop="70dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_link_to_login" />

    <Button
        android:layout_below="@+id/btn_to_login"
        android:layout_marginTop="16dp"
        android:id="@+id/btn_to_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_link_to_register"/>

</RelativeLayout>